refactor: GroupService의 findNotices() 메서드에서 레디스 관련 로직은 GroupCacheService 클래스로 이동